# atelier

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  01_index.py  02_cluster_persons.py  02b_group_series.py  03_score.py  04_server.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  demo_seed.py  eslint.config.js  mise.toml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
atelier/: __init__.py  __main__.py  cli.py  config.py  db.py  demo_seed.py  errors.py  fsdialog.py  imaging.py  landmarks.py  learning.py  logsetup.py  migrate.py  models.py  overrides.py  projects.py  quality.py  recognition.py  runner.py  series.py  server.py  settings.py
atelier/pipeline/: cluster.py  index.py  learn.py  score.py  series.py
atelier/web/: api.js  buckets.js  cull.js  dashboard.js  dialog.js  faces.js  index.html  main.js  people.js  prints.js  run.js  settings.js  style.css
docs/: backlog.md
docs/audit/: review-scale-audit.md
docs/bdd/: README.md  app-shell.feature  buckets.feature  face-detection-and-indexing.feature  face-inspector-and-media.feature  people-clustering-and-identity-edits.feature  per-project-settings.feature  pipeline-run-and-run-screen.feature  print-list.feature  projects-and-dashboard.feature  review-cull.feature  run-history-and-api-details.feature  security-model-and-safe-export.feature
docs/design/: PLAN.md  REQUIREMENTS.md  scoring-taxonomy.md
docs/superpowers/specs/: 2026-06-13-project-centric-ui-design.md  2026-06-23-landing-screenshot-tour-design.md
facelib/: __init__.py  config.py  db.py  errors.py  imaging.py  logsetup.py  migrate.py  models.py  overrides.py  projects.py  quality.py  runner.py
tests/: test_cluster.py  test_db.py  test_imaging.py  test_learning.py  test_migrate.py  test_migrations.py  test_overrides.py  test_projects.py  test_quality.py  test_runner.py  test_score_p1.py  test_series.py  test_server.py
web/: api.js  cull.js  dashboard.js  faces.js  index.html  main.js  people.js  prints.js  run.js  settings.js  style.css
website/: README.md  firebase.json
website/public/: index.html  site.webmanifest
website/public/css/: style.css
website/public/js/: demo.js  site.js
