[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atelier"
version = "0.1.0"
description = "Local photo-culling tool — face indexing, clustering, and best-of-burst selection for wedding photographers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch~=2.2",
    "torchvision~=0.17",
    "insightface~=0.7.3",
    "onnxruntime~=1.17",
    "hdbscan>=0.8.33",
    "mediapipe~=0.10",
    "numpy>=1.24,<2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "flask>=3.0",
    "facenet-pytorch>=2.5.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["facelib"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "web"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E741"]   # ambiguous var name 'l' used in tight loops
