[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atelier"
version = "0.1.0"
description = "Local photo-culling tool — face indexing, clustering, and best-of-burst selection for photographers."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bharath Kumar S" }]
keywords = [
    "face-recognition",
    "photo-culling",
    "clustering",
    "insightface",
    "wedding-photography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "torch~=2.2",
    "torchvision~=0.17",
    "insightface~=0.7.3",
    "onnxruntime~=1.17",
    "huggingface_hub~=0.20",
    "hdbscan>=0.8.33",
    "mediapipe~=0.10",
    "numpy>=1.24,<2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "flask>=3.0",
    "facenet-pytorch>=2.5.3",
]

[project.urls]
Homepage = "https://bharathksunil.com"
Repository = "https://github.com/bharathksunil/atelier"
Issues = "https://github.com/bharathksunil/atelier/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6", "flask>=3.0"]

[project.scripts]
atelier = "atelier.cli:main"
atelier-server = "atelier.server:main"
atelier-index = "atelier.pipeline.index:main"
atelier-cluster = "atelier.pipeline.cluster:main"
atelier-series = "atelier.pipeline.series:main"
atelier-score = "atelier.pipeline.score:main"

[tool.hatch.build.targets.wheel]
packages = ["atelier"]

[tool.hatch.build.targets.wheel.force-include]
"atelier/web" = "atelier/web"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "atelier/web"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E741"]   # ambiguous var name 'l' used in tight loops
